--- a/day1/styles/style.css
+++ b/day1/styles/style.css
@@ -29,6 +29,7 @@ body {
 }
 
 .timerContainer {
+  position: relative;
   width: 518px;
   height: 518px;
   display: flex;
@@ -36,17 +37,34 @@ body {
   align-items: center;
   border-radius: 50%;
   box-shadow: -5px 14px 44px #000000, 5px -16px 50px rgba(255, 255, 255, 0.15);
-  border: 10px solid var(--color-green);
 }
 
-/*.timerScale {
-  width: 518px;
-  height: 518px;
-  border-radius: 50%;
-  border: 10px solid var(--color-red);
-}*/
+.svgBorder {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: rotateY(-180deg) rotateZ(-90deg);
+}
+
+.progress {
+  stroke-width: 10;
+  fill: transparent;
+  stroke: var(--color-green);
+  stroke-dasharray: 1600px;
+  stroke-dashoffset: 0;
+}
+
+@keyframes countdown {
+  from {
+    stroke-dashoffset: 0px;
+  }
+  to {
+    stroke-dashoffset: 1600px;
+  }
+}
 
 .timerFilling {
+  position: relative;
   width: 500px;
   height: 500px;
   display: flex;
